<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@color/list_item_select_true"
        >
        <TextView
            android:id="@+id/tvCurrentDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/calendar_title"
            android:textSize="22sp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="10dp"
            android:orientation="vertical"
            >

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >

                <TableRow>
                    <TextView
                        style="@style/dateStyle"
                        android:text="@string/sunday"
                        android:textColor="@color/calendar_text_color_weekend"
                        />
                    <TextView
                        style="@style/dateStyle"
                        android:text="@string/monday"
                        android:textColor="@color/calendar_text_color_weekday"
                        />
                    <TextView
                        style="@style/dateStyle"
                        android:text="@string/thesday"
                        android:textColor="@color/calendar_text_color_weekday"
                        />

                    <TextView
                        style="@style/dateStyle"
                        android:text="@string/wednesday"
                        android:textColor="@color/calendar_text_color_weekday"
                        />
                    <TextView
                        style="@style/dateStyle"
                        android:text="@string/thursday"
                        android:textColor="@color/calendar_text_color_weekday"
                        />
                    <TextView
                        style="@style/dateStyle"
                        android:text="@string/friday"
                        android:textColor="@color/calendar_text_color_weekday"
                        />
                    <TextView
                        style="@style/dateStyle"
                        android:text="@string/saturday"
                        android:textColor="@color/calendar_text_color_weekend"
                        />
                </TableRow>
            </TableLayout>
        </LinearLayout>
    </LinearLayout>
    <View
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:background="@color/calendar_title_bottom"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_calendar"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            android:layout_gravity="center"
            android:background="@color/white" >
        </android.support.v4.view.ViewPager>
    </LinearLayout>

</LinearLayout>
